--- a/index.html
+++ b/index.html
@@ -65,10 +65,8 @@
 <body>
 
     <div class="container">
-        <h1>⛏️ Diamant: Logica Minimal</h1>
-
-        <p style="font-size: 0.9em; color: #666;">**Regole:** 4 giocatori, 5 spedizioni. Doppio pericolo = Spedizione fallita e 1 carta pericolo rimossa permanentemente.</p>
-        
+        <h1>Diamant: Logica Minimal</h1>
+      
         <div style="margin-bottom: 15px;">
             <button id="primary-action-button">Inizia Nuova Spedizione (1)</button>
         </div>
