--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
     <div class="container">
-        <h1>Diamant: Logica Accessibile</h1>
+        <h1>Diamant</h1>
       
         <button id="primary-action-button">Inizia Nuova Spedizione (1)</button>
 
